@@ -5,6 +5,7 @@ HEAD, planned as v0.17
 - Added support of some more ATF150x chips.
 - Added a register file component.
 - Added an "export to zip" function.
+- If an input or output is several bits wide, all pin numbers can be specified by a comma-separated list.
 - Bug fixes
   - Splitter, BarrelShifter and Comparator now are working with 64 bit.
   - fixed a bug in library IC 74198
